--- a/_data/students_masters.yml
+++ b/_data/students_masters.yml
@@ -30,69 +30,74 @@
 #  education1:
 
 
-- name: Tian Qiu
-  photo: rock.jpg
-  info: Master student since 2019
-  project: Wireless VR
-  number_educ: 0
-  education1: 
+# - name: Tian Qiu
+#   photo: rock.jpg
+#   info: Master student since 2019
+#   project: Wireless VR
+#   number_educ: 0
+#   education1: 
 
-- name: Yeswanth Guntupalli
-  photo: rock.jpg
-  info: Master student since 2019
-  project: Full Duplex Radios
-  number_educ: 0
-  education1: 
+# - name: Yeswanth Guntupalli
+#   photo: rock.jpg
+#   info: Master student since 2019
+#   project: Full Duplex Radios
+#   number_educ: 0
+#   education1: 
 
-- name: Chenfeng Wu
+- name: <a href="https://www.linkedin.com/in/chenfengw/">Chenfeng Wu</a>
   photo: rock.jpg
   info: UG since 2016, MS since 2020 (joined WCSNG in 2019)
   project: Robotics and Indoor Navigation
   number_educ: 1
   education1: "Highlight: Coauthor [Mobicom'20], [NSDI'20]"
 
-- name: Keshav Rungta
+- name: <a href="https://www.linkedin.com/in/keshav-rungta/">Keshav Rungta</a>
   photo: rock.jpg
   info: UG since 2016, MS since 2020 (joined WCSNG in 2019)
   project: Robotics and Radars
-  number_educ: 1
+  number_educ: 2
   education1:  "Highlights: Coauthor [Sensys'20]"
+  education2: 
+# - name: Hou-Wei Lin
+#   photo: rock.jpg
+#   info: Master student since 2019
+#   project: Millimeter wave
+#   number_educ: 1
+#   education1: "Highlights: Coauthor [MMNets'20]"
 
-- name: Hou-Wei Lin
-  photo: rock.jpg
-  info: Master student since 2019
-  project: Millimeter wave
-  number_educ: 1
-  education1: "Highlights: Coauthor [MMNets'20]"
+# - name: Navin Adarsh
+#   photo: rock.jpg
+#   info: Master student since 2019
+#   project: Virtual Reality
+#   number_educ: 0
+#   education1: 
 
-- name: Navin Adarsh
-  photo: rock.jpg
-  info: Master student since 2019
-  project: Virtual Reality
-  number_educ: 0
-  education1: 
+# - name: Xiangwei Shao
+#   photo: rock.jpg
+#   info: Master student since 2019
+#   project: Millimeter wave 
+#   number_educ: 1
+#   education1: "Highlights: Coauthor [MMNets'20]"
 
-- name: Xiangwei Shao
-  photo: rock.jpg
-  info: Master student since 2019
-  project: Millimeter wave 
-  number_educ: 1
-  education1: "Highlights: Coauthor [MMNets'20]"
+# - name: Nitish Kulshrestha
+#   photo: rock.jpg
+#   info: Master student since 2019
+#   project: Backscatter
+#   number_educ: 0
+#   education1: 
 
-- name: Nitish Kulshrestha
-  photo: rock.jpg
-  info: Master student since 2019
-  project: Backscatter
-  number_educ: 0
-  education1: 
-
-- name: Sanjeev
+- name: <a href="https://www.linkedin.com/in/sanjeev-anthia-ganesh-71112113a/">Sanjeev Anthia Ganesh</a>
   photo: rock.jpg
   info: Master student since 2020
   project: Backscatter
   number_educ: 0
   education1: 
 
-
+- name: <a href="https://www.linkedin.com/in/kuan-hau-chi/">Howard Chi</a>
+  photo: rock.jpg
+  info: Master student since 2020
+  project: Full Duplex Radios
+  number_educ: 0
+  education1: "Highlights: Coauthor "
 
 
