--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,8 @@
+- date: June 2021
+  headline: Ish was awarded winner of 3MT competition at student workshop SMS, Mobisys'21. Congratulations Ish!
 
 - date: May 2021
-  headline: Congratulations Ish! accepted Siggcomm'21 paper on <a href="https://arxiv.org/abs/2101.04249">mmReliable</a> (enabling reliable mmWave links).
+  headline: Congratulations Ish! paper accepted at Siggcomm'21 on <a href="https://wcsng.ucsd.edu/mmreliable">mmReliable</a> (enabling reliable mmWave links).
 
 - date: Mar 2021
   headline: Manideep presented <a href="https://wcsng.ucsd.edu/syncscatter/">SyncScatter- Enabling WiFi like synchronization and range for WiFi backscatter Communication</a> at NSDI'21
