added uloc card to localization, and did some minor clean ups in people page

--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,22 @@
+- title: "ULoc: a cm-accurate, low-latency and power-efficient UWB tag localization system"
+  image: uloc-overview.jpg
+  description: "A myriad of IoT applications demand centimeter-accurate localization that is robust to blockages from hands, furniture, or other occlusions in the environment. To address these needs, we developed ULoc, a scalable, low-power, and cm-accurate UWB localization and tracking system. ULoc's builds a multi-antenna UWB anchor and develops a novel 3D tracking algorithm to deliver a stationary localization accuracy of less than 5 cm and a tracking accuracy of 10 cm in mobile conditions."
+  authors: Minghui Zhao, Tyler Chang, Aditya Arun, Roshan Ayyalasomayajula, Chi Zhang, Dinesh Bharadia
+  link:
+    url: https://dl.acm.org/doi/10.1145/3478124
+    display:  "[IMWUT 2021]"
+  highlight: 1
+  tag1: localization
+  tag2: 
+  news1: 
+  website: 
+    url: https://wcsng.ucsd.edu/uloc/
+    display: "[ULoc-Webpage]"
+  paper: 
+    url: files/uloc.pdf
+    display: "[paper]"
+
+
 - title: "Two beams are better than one: Towards Reliable and High Throughput mmWave Links"
   image: mmreliable.png
   description: "Millimeter-wave communication with high throughput and high reliability is poised to be a gamechanger for V2X and VR applications. However, mmWave links are notorious for low reliability since they suffer from frequent outages due to blockage and user mobility. We build mmReliable, a reliable mmWave system that implements multi-beamforming and user tracking to handle environmental vulnerabilities. It creates constructive multi-beam patterns and optimizes their angle, phase, and amplitude to maximize the signal strength at the receiver. Multi-beam links are reliable since they are resilient to occasional blockages of few constituent beams compared to a single-beam system. We implement mmReliable on a 28 GHz testbed with 400 MHz bandwidth, and a 64 element phased array supporting 5G NR waveforms. Rigorous indoor and outdoor experiments demonstrate that mmReliable achieves close to 100% reliability providing 2.3x improvement in the throughput-reliability product than single-beam systems."
