--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -16,7 +16,7 @@
   email: roshana@eng.ucsd.edu
   number_educ: 2
   education1: Roshan’s current research interests are in using wireless and computer vision techniques bolstered with machine learning algorithms. He focuses on applications such as detection, localization, and tracking of objects with a vision of autonomous vehicles.
-  education2: "Highlights: Conext'19, Mobicom'20, NSDI'20, ICASSP'21"
+  education2: "Highlights: Conext'19, Mobicom'20, NSDI'20, ICASSP'21, IMWUT '21"
   education3: 
   education4: 
 
@@ -72,7 +72,7 @@
   email: aarun@eng.ucsd.edu
   number_educ: 2
   education1:  Aditya's research currently focuses on realizing accurate indoor localization by introducing a new WiFi-based sensor modality using graph-based optimization techniques.
-  education2: "Highlights: NSDI'20, Mobicom'20, Sensys'20 workshop"
+  education2: "Highlights: NSDI'20, Mobicom'20, Sensys'20 workshop, IMWUT '21"
   education3:
   education4:
 
