--- a/_data/research_list.yml
+++ b/_data/research_list.yml
@@ -78,4 +78,14 @@
   highlight: 1
   news2:
 
+- title: "Privacy"
+  image: comm.jpg
+  description: We investigate privacy and security vulnerabilities in wireless systems, and develop defense mechanisms to address such vulnerabilities.
+  authors:
+  link:
+    url: /privacy
+    display:  Details and Publications
+  highlight: 1
+  news2:
+
 
