--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -13,7 +13,7 @@
     url: https://wcsng.ucsd.edu/privacy/
     display: "[Webpage]"
   paper:
-    url: files/BLE_attack_paper.pdf
+    url: files/sp22_paper.pdf
     display: "[paper]"
 
 
