Update news, team, publication, and pics. Also add waip webpage

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,19 @@
+
+
+- date: May 2022
+  headline: BLE security paper is out. See more details <a href="https://wcsng.ucsd.edu/ble-privacy/">here</a>. Congrats Hadi!
+
+- date: Apr 2022
+  headline: WiFi localization and mapping paper <a href="https://wcsng.ucsd.edu/p2slam/">P2SLAM</a> accepted at IEEE Robotics and Automation'22. P2SLAM dataset is also released. Congrats Aditya Arun! 
+- date: Dec 2021
+  headline: Agrim got an invite from GetMobile'22 on his NSDI'21 paper on <a href="https://dl.acm.org/doi/abs/10.1145/3511285.3511296">Sensing and localizing contact forces with signal reflections</a>. Congrats Agrim!
+
+- date: Dec 2021
+  headline: SCISRS $6M IARPA grant to secure wireless data communication (partner with JASR systems and Noise lab, UCSD). <a href="https://jacobsschool.ucsd.edu/news/release/3357">See news</a>.
+
+- date: Sep 2021
+  headline: Scott Zhao, undergraduate researcher at WCSNG, presented his paper ULoc at IMWUT'21. Watch a demo <a href="https://wcsng.ucsd.edu/uloc/">ULoc- a cm-accurate, low-latency and power-efficient UWB tag localization system</a>.
+
 - date: June 2021
   headline: Ish was awarded winner of 3MT competition at student workshop SMS, Mobisys'21. Congratulations Ish!
 
