--- a/_data/pictures.yml
+++ b/_data/pictures.yml
@@ -1,4 +1,14 @@
 
+- title: frisbee
+  image: frisbee.jpg
+- title: group_christmas21
+  image: group_christmas21.jpg
+- title: christmas21
+  image: christmas21.jpg
+- title: teacher_s_day_dinesh
+  image: teacher_s_day_dinesh.png
+- title: ish_mmreliable
+  image: ish_mmreliable.jpg
 - title: Zoom Party
   image: zoom_party.png
 - title: Birthday celebration
