--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -8,3 +8,11 @@
   education2: "Highlights: Mobisys'19, Mobicom'20, ISSCC'20"
   education3:
   education4:
+
+- name: <a href="https://www.linkedin.com/in/chinghanyu/">Hans Yu</a> 
+  photo: rock.jpg
+  duration: Class of 2019 (Now Firmware Engineer at Broadcom, SD)
+  info: PhD co-advised with Prof. Ramesh Rao. Hans established a large WiFi network on our campus building using Quantenna AP, with a goal to improve WiFi handover. 
+  project: 
+  number_educ: 0
+  education1: 
