--- a/_data/students_masters.yml
+++ b/_data/students_masters.yml
@@ -44,20 +44,21 @@
 #   number_educ: 0
 #   education1: 
 
-- name: <a href="https://www.linkedin.com/in/chenfengw/">Chenfeng Wu</a>
-  photo: rock.jpg
-  info: UG since 2016, MS since 2020 (joined WCSNG in 2019)
-  project: Robotics and Indoor Navigation
-  number_educ: 1
-  education1: "Highlight: Coauthor [Mobicom'20], [NSDI'20]"
+# - name: <a href="https://www.linkedin.com/in/chenfengw/">Chenfeng Wu</a>
+#   photo: rock.jpg
+#   info: UG since 2016, MS since 2020 (joined WCSNG in 2019)
+#   project: Robotics and Indoor Navigation
+#   number_educ: 1
+#   education1: "Highlight: Coauthor [Mobicom'20], [NSDI'20]"
 
-- name: <a href="https://www.linkedin.com/in/keshav-rungta/">Keshav Rungta</a>
-  photo: rock.jpg
-  info: UG since 2016, MS since 2020 (joined WCSNG in 2019)
-  project: Robotics and Radars
-  number_educ: 1
-  education1:  "Highlights: Coauthor [Sensys'20]"
-  education2: 
+# - name: <a href="https://www.linkedin.com/in/keshav-rungta/">Keshav Rungta</a>
+#   photo: rock.jpg
+#   info: UG since 2016, MS since 2020 (joined WCSNG in 2019)
+#   project: Robotics and Radars
+#   number_educ: 1
+#   education1:  "Highlights: Coauthor [Sensys'20]"
+#   education2: 
+
 # - name: Hou-Wei Lin
 #   photo: rock.jpg
 #   info: Master student since 2019
@@ -86,18 +87,68 @@
 #   number_educ: 0
 #   education1: 
 
-- name: <a href="https://www.linkedin.com/in/sanjeev-anthia-ganesh-71112113a/">Sanjeev Anthia Ganesh</a>
+- name: Sanjeev Anthia Ganesh
   photo: rock.jpg
   info: Master student since 2020
   project: Backscatter
   number_educ: 0
   education1: 
 
-- name: <a href="https://www.linkedin.com/in/kuan-hau-chi/">Howard Chi</a>
+# - name: <a href="https://www.linkedin.com/in/kuan-hau-chi/">Howard Chi</a>
+#   photo: rock.jpg
+#   info: Master student since 2020
+#   project: Full Duplex Radios
+#   number_educ: 0
+#   education1: "Highlights: Coauthor "
+
+- name: Abhishek Khare
   photo: rock.jpg
-  info: Master student since 2020
-  project: Full Duplex Radios
+  info: Master student since 2021
+  project: WCSNG lab
   number_educ: 0
-  education1: "Highlights: Coauthor "
+  education1: 
+
+- name: Harsh Deshpande
+  photo: rock.jpg
+  info: Master student since 2021
+  project: WCSNG lab
+  number_educ: 0
+  education1: 
+
+- name: Nagarjun Bhat
+  photo: rock.jpg
+  info: Collaborator
+  project: WCSNG lab
+  number_educ: 0
+  education1: 
+
+- name: Pratik Ratadiya
+  photo: rock.jpg
+  info: Master student since 2021
+  project: WCSNG lab
+  number_educ: 0
+  education1: 
+
+- name: Sreevatsank Kadaveru
+  photo: rock.jpg
+  info: Master student since 2021
+  project: Spectrum Sensing
+  number_educ: 0
+  education1: 
+
+- name: Shubham Jain
+  photo: rock.jpg
+  info: Master student since 2021
+  project: Radar
+  number_educ: 0
+  education1: 
+
+# - name: Abhishek Khare
+#   photo: rock.jpg
+#   info: Master student since 2021
+#   project: WCSNG lab
+#   number_educ: 0
+#   education1: 
+
 
 
