--- a/_data/students_undergrad.yml
+++ b/_data/students_undergrad.yml
@@ -34,7 +34,7 @@
 - name: Raini Wu
   photo: rock.jpg
   info: Undergrad student since 2019 (joined WCSNG in 2019)
-  project: Virtual Reality
+  project: Virtual Reality, 5G testbed
   number_educ: 0
   education1: "Highlights: Coauthor "
 
@@ -60,5 +60,51 @@
 #   number_educ: 0
 #   education1: "Highlights: Coauthor "
 
+- name: Kanishka Roy
+  photo: rock.jpg
+  info: Undergrad student since 2020 (joined WCSNG in 2021)
+  project: Localization, Robotics
+  number_educ: 0
+  education1: "Highlights:"
 
+- name: Shayaun Bashar
+  photo: rock.jpg
+  info: Undergrad student since 2019 (joined WCSNG in 2021)
+  project: Simulating, and designing small antennas
+  number_educ: 0
+  education1: "Highlights:"
 
+- name: Akshit Agarwal
+  photo: rock.jpg
+  info: Undergrad student since 2019 (joined WCSNG in 2021)
+  project: Backscatter
+  number_educ: 0
+  education1: "Highlights:"
+
+- name: Jiawen Xu
+  photo: rock.jpg
+  info: Undergrad student since 2020 (joined WCSNG in 2021)
+  project: 5G NR
+  number_educ: 0
+  education1: "Highlights:"
+
+- name: Shasta Subramanian
+  photo: rock.jpg
+  info: Undergrad student since 2020 (joined WCSNG in 2021)
+  project: 5G NR
+  number_educ: 0
+  education1: "Highlights:"
+
+- name: Wen Tian
+  photo: rock.jpg
+  info: Undergrad student since 2020 (joined WCSNG in 2021)
+  project: Backscatter
+  number_educ: 0
+  education1: "Highlights:"
+
+- name: Zijia Guo
+  photo: rock.jpg
+  info: Undergrad student since 2018 (joined WCSNG in 2020)
+  project: PCB design
+  number_educ: 0
+  education1: "Highlights:"
