--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -20,13 +20,13 @@
   education3: 
   education4: 
 
-- name: Yeswanth Reddy G.
-  photo: yeswanth.jpeg
-  info: PhD student, started 2017
-  email: yguddeti@eng.ucsd.edu
-  number_educ: 2
-  education1: Yeswanth is developing systems which explore new paradigms to interact with the RF spectrum for applications such as spectrum sensing and RF fingerprinting. Future projects include indoor AP synchronization for localization and distributed MIMO.
-  education2: "Highlights: NSDI'19, Mobisys'19, Sensys'20"
+# - name: Yeswanth Reddy G.
+#   photo: yeswanth.jpeg
+#   info: PhD student, started 2017
+#   email: yguddeti@eng.ucsd.edu
+#   number_educ: 2
+#   education1: Yeswanth is developing systems which explore new paradigms to interact with the RF spectrum for applications such as spectrum sensing and RF fingerprinting. Future projects include indoor AP synchronization for localization and distributed MIMO.
+#   education2: "Highlights: NSDI'19, Mobisys'19, Sensys'20"
 
 - name: Manideep Dunna
   photo: manideep.jpg
@@ -62,7 +62,7 @@
   email: hgivehch@eng.ucsd.edu 
   number_educ: 2
   education1:  Hadi’s research interests include developing machine learning and data-driven algorithms to enhance networked systems (e.g. wireless communication and sensing, resource sharing and scheduling)
-  education2: Co-advised by Prof. Aaron Schulman
+  education2: Primary advisor - Prof. Aaron Schulman
   education3:
   education4:
 
@@ -98,6 +98,7 @@
 
 
 
+
 #- name: Nikhil Shinde
 #  photo: yeswanth.jpg
 #  info: PhD Student, started 2019
@@ -108,15 +109,15 @@
 #  education3:
 #  education4:
 
-#- name: Byungjun Kim
-#  photo: byungjun.jpeg
-#  info: PhD Student, started 2019
-#  email: byk004@eng.ucsd.edu
-#  number_educ: 1
-#  education1:  Byungjun's research interests include communication networks and wireless systems, involving wireless charging and vehicular communications.
-#  education2:
-#  education3:
-#  education4:
+- name: Byungjun Kim
+  photo: byungjun.jpeg
+  info: PhD Student, started 2019
+  email: byk004@eng.ucsd.edu
+  number_educ: 2
+  education1: Byungjun's research interests include communication networks and wireless systems, involving spectrum sensing, machine learning and vehicular communications.
+  education2: Primary advisor- Prof. Peter Gerstoft 
+  education3:
+  education4:
 
 - name: Richard Bell
   photo: richard.png
@@ -139,3 +140,12 @@
   education3:
   education4:
 
+- name: <a href='https://sites.google.com/view/rohithreddyvennam/'>Rohith Reddy Vennam</a>
+  photo: rohith.jpg
+  info: PhD Student, started 2021
+  email: rvennam@ucsd.edu
+  number_educ: 1
+  education1:  Research interests include millimeter-wave communications, multi-user MIMO, wireless sensing, ML in wireless communications, and building end-to-end systems.
+  education2: 
+  education3:
+  education4:
