adding aditya's personal webage

--- a/_data/students_undergrad.yml
+++ b/_data/students_undergrad.yml
@@ -38,7 +38,7 @@
   number_educ: 0
   education1: "Highlights: Coauthor "
 
-- name: William Hunter 
+- name: <a href="https://acsweb.ucsd.edu/~wshunter/"> William Hunter </a> 
   photo: rock.jpg
   info: Undergrad student since 2019 (joined WCSNG in 2021)
   project: Localization
