--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -66,13 +66,13 @@
   education3:
   education4:
 
-- name: Aditya Arun
+- name: <a href="/aarun"> Aditya Arun </a>
   photo: aditya.jpeg
   info: PhD Student, started 2019
   email: aarun@eng.ucsd.edu
   number_educ: 2
   education1:  Aditya's research currently focuses on realizing accurate indoor localization by introducing a new WiFi-based sensor modality using graph-based optimization techniques.
-  education2: "Highlights: NSDI'20, Mobicom'20, Sensys'20 workshop, IMWUT '21"
+  education2: "Highlights: NSDI'20, Mobicom'20, Sensys'20 workshop, IMWUT '21, ICRA '22"
   education3:
   education4:
 
