--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -4,7 +4,7 @@
   authors: 	Richad Bell, Radhika Mathuria, fred harris, Peter Gerstoft, and Dinesh Bharadia
   link:
     url: 
-    display: "[Assilomar 2022]"
+    display: "[Asilomar 2022]"
   highlight: 1
   tag1: spectrum_sensing
   tag2: 
